Bug 96504 - [vulkancts] compute tests crash
Summary: [vulkancts] compute tests crash
Status: VERIFIED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Kenneth Graunke
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-06-13 03:41 UTC by Mark Janes
Modified: 2016-06-13 20:56 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Mark Janes 2016-06-13 03:41:16 UTC
With Mesa 0fb85ac, 9 vulkancts tests began crashing:

piglit.deqp-vk.compute.basic.shared_atomic_op_multiple_groups
piglit.deqp-vk.compute.basic.shared_atomic_op_multiple_invocations
piglit.deqp-vk.compute.basic.shared_atomic_op_single_group
piglit.deqp-vk.compute.basic.shared_atomic_op_single_invocation
piglit.deqp-vk.compute.basic.shared_var_multiple_groups
piglit.deqp-vk.compute.basic.shared_var_multiple_invocations
piglit.deqp-vk.compute.basic.shared_var_single_group
piglit.deqp-vk.compute.basic.shared_var_single_invocation

i965: Use the correct number of threads for compute shaders.
Author:     Kenneth Graunke <kenneth@whitecape.org>
Reviewed-by: Francisco Jerez <currojerez@riseup.net>
Reviewed-by: Jordan Justen <jordan.l.justen@intel.com>
Comment 1 Mark Janes 2016-06-13 03:42:14 UTC
The commit I provided was the first failure in CI.  I'm happy to bisect the series if needed.
Comment 2 Kenneth Graunke 2016-06-13 19:23:57 UTC
Fixed by

commit 5a0d294d38505ae61293ae1a9184e1b3228ef2af
Author: Kenneth Graunke <kenneth@whitecape.org>
Date:   Mon Jun 13 12:18:23 2016 -0700

    i965: Fix encode_slm_size() to take a generation, not a device info.
    
    In the Vulkan driver, we have the generation number (a compile time
    constant) but not necessarily the brw_device_info struct.  I meant
    to rework the function to take a generation number instead of a
    brw_device_info pointer to accomodate this.  But I forgot, and left
    it taking a brw_device_info pointer, while making Vulkan pass the
    generation number (8, 9, ...) directly.  This led to crashes.
    
    Brown paper bag fix for commit 87d062a94080373995170f51063a9649.
    
    Cc: "12.0" <mesa-stable@lists.freedesktop.org>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=96504
    Signed-off-by: Kenneth Graunke <kenneth@whitecape.org>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.